tdf#96366 disable treeview results until fix available

Since f82d89f35207fc1cfc00ad5cd914b74c55c3e3d2 EditThisFunc() and
EditNextFunc() are used to iterate through the formula to obtain
expression results to display in the treeview. Calling the Edit...()
functions spoils about everything as it messes around with the edit
state. As the name suggests..

Change-Id: I8b35d85b7bbf8821b5a995e84f9dd88a0f6f00b9
(cherry picked from commit 8217ddbfc863dd9b313d6b5eaecb1877e42b2d02)